Fixed a really annoying/sneaky bug where I was setting the yyear on the timeline to this.id instead of this.id-startYear, which would set the frame to, say, 1776 instead of 4. This put it WAY past the wraparound cutoff.

--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 .play-container {
 	display: inline-block;
-	border: 1px solid black;
+}
+
+#play-button {
+	border-radius: 4px;
 }
 
 .tick {
 	display:inline-block;
 	padding-left: 1em;
 	padding-right: 1em;
-	border: 1px solid black;
 }
 
 .tick:hover {
